Forced black text to fix issue with dark mode users

--- a/app/style.css
+++ b/app/style.css
@@ -4,6 +4,7 @@ main {
     padding-left: 6rem;
     padding-right: 6rem;
     background-color: white;
+    color: black;
 }
 
 
